--- a/index.html
+++ b/index.html
@@ -1751,7 +1751,7 @@
                 </div>
                 <div id="PARAGRAPH1" class='ladi-element'>
                     <div class='ladi-paragraph ladi-transition'>✔️ Contract:
-                        0x00000000000000000000</div>
+                        9kG2suQN9chus3NiThH7cTYw3ytfQVYGvF3RgaPVpump</div>
                 </div>
             </div>
         </div>
